[package]
name = "elf2tab"
version = "0.4.0"
description = "Compiles from ELF to TAB (a Tock Application Bundle using the Tock Binary Format)"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
repository = "https://github.com/tock/tock"
license = "MIT"
readme = "README.md"
keywords = ["elf", "code", "tock", "compile"]

[dependencies]
chrono = "0.4.2"
tar = "0.4.15"
elf = "0.0.10"
structopt = "0.2.10"
