[package]
name = "elf2tab"
version = "0.11.0-dev"
edition = "2018"
description = "Compiles from ELF to TAB (a Tock Application Bundle using the Tock Binary Format)"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
repository = "https://github.com/tock/elf2tab"
license = "MIT"
readme = "README.md"
keywords = ["elf", "code", "tock", "compile"]

[[bin]]
name = "elf2tab"
path = "src/main.rs"

[dependencies]
chrono = "0.4.2"
tar = "0.4.36"
elf = "0.0.10"
structopt = "0.3.14"
sha2 = "0.10.2"
ring = "0.16.20"
rsa-der = "0.3.0"