[package]
name = "elf2tab"
version = "0.14.0-dev"
edition = "2021"
description = "Compiles from ELF to TAB (a Tock Application Bundle using the Tock Binary Format)"
authors = ["Tock Project Developers <tock-dev@googlegroups.com>"]
repository = "https://github.com/tock/elf2tab"
license = "MIT"
readme = "README.md"
keywords = ["elf", "code", "tock", "compile"]

[[bin]]
name = "elf2tab"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.26", default-features = false, features = ["clock", "std"] }
clap = { version = "4.3.17", features = ["derive", "color", "wrap_help"] }
clap-num = "1.0.2"
tar = "0.4.39"
elf = "0.7.2"
sha2 = "0.10.7"
ring = "0.16.20"
